# iterative_methods_for_solving_SLAEs

./: CMakeLists.txt  inversion.cpp  is_degenerate.cpp  main.cpp  main.h  multiplication.cpp  norm.cpp  print_slae.cpp  reverse_traverse.cpp
Jacobi_method/: Jacobi_method.cpp  Jacobi_method.h
QR_method/: QR_method.cpp  QR_method.h  create_matrix.cpp
Seidel_method/: Seidel_method.cpp  Seidel_method.h
TEST/: D0.TXT  D1.TXT  D2.TXT
relaxation_method/: relaxation_method.cpp  relaxation_method.h
simple_iteration_method/: simple_iteration_method.cpp  simple_iteration_method.h
